kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system-service
  labels:
    app: solar-system
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: solar-system
